--- a/drfahm-frontend/public/index.html
+++ b/drfahm-frontend/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0A0E27" />
+    <meta name="theme-color" content="#0F172A" />
     <meta
       name="description"
-      content="NQTexcel - Gamified test prep for QUDURAT, NAFS & TAHSILI exams"
+      content="DrFahm - Master QUDURAT, NAFS & TAHSILI exams with gamified learning"
     />
-    <title>NQTexcel - Master Your Exams</title>
+    <title>DrFahm - Master Your Exams</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
