--- a/drfahm-frontend/public/index.html
+++ b/drfahm-frontend/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#1E2A38" />
     <meta
       name="description"
-      content="DrFahm - Master QUDURAT, NAFS & TAHSILI exams with gamified learning"
+      content="DrFahm - Clarity to 100% in NAFS, Qudurat & Tahsili"
     />
-    <title>DrFahm - Master Your Exams</title>
+    <title>DrFahm - Mastery has arrived</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
